tests/expectations/compiler/finalize/increment_fail.out
DCE_ENABLED:
Error [ETYC0372005]: Unknown function `increment`
    --> compiler-test:10:9
     |
  10 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372005]: Unknown function `increment`
    --> compiler-test:10:9
     |
  10 |         increment(amounts, addr, amount);
     |         ^^^^^^^^^
